@@ -1,3 +1,13 @@
+2007-02-03  Michael Poole <mdpoole@troilus.org>
+
+	* ircd/ircd_reply.c (protocol_violation): Avoid reusing the
+	va_list in vd.
+
+	* ircd/send.c (sendcmdto_channel_butone): Warn against using %v in
+	the pattern -- that will cause incorrect behavior.
+	(sendwallto_group_butone): Likewise.
+	(sendcmdto_match_butone): Likewise.
+
 2007-01-22  Michael Poole <mdpoole@troilus.org>
 
 	* ircd/channel.c (find_delayed_joins): New function.
